k8s/06-device-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-adapter
  namespace: wind-satpayev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-adapter
  template:
    metadata:
      labels:
        app: device-adapter
    spec:
      containers:
        - name: device-adapter
          image: wind-satpayev-adapter:latest
          imagePullPolicy: IfNotPresent
