k8s/04-mosquitto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  namespace: wind-satpayev
spec:
  type: NodePort
  ports:
    - port: 1883
      targetPort: 1883
      nodePort: 31883
      name: mqtt
  selector:
    app: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: wind-satpayev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0
          ports:
            - containerPort: 1883
