k8s/07-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wind-satpayev
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
      name: http
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: wind-satpayev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: wind-satpayev-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
